# git-mcp-test

./: .gitignore  README.md  app.py  database.db  database.py  main.py  models.py  pyproject.toml
.github/workflows/: test.yml
routers/: todos.py
static/css/: style.css
templates/: index.html
templates/partials/: todo_item.html
tests/: test_main.py
